# unwrappy

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: code-quality.yml  docs.yml  lint.yml  publish-pypi.yml  test.yml
docs/: architecture.md  contributing.md  examples.md  getting-started.md  index.md
docs/api/: index.md  option.md  result.md
docs/guide/: index.md  lazy-evaluation.md  option.md  result.md  serialization.md
docs/includes/: abbreviations.md
docs/stylesheets/: extra.css
examples/: README.md  async_patterns.py  data_processing.py  database.py  error_handling.py  web_api.py
src/unwrappy/: __init__.py  exceptions.py  option.py  result.py  serde.py
tests/: test_option.py  test_result.py  test_serde.py
