[project]
name = "unwrappy"
version = "0.0.1"
description = "Yet another Rust-inspired Result and Option ergonomics brought to Python, enabling safe, expressive error handling without exceptions."
readme = "README.md"
authors = [
    { name = "Leonardo Diegues", email = "leo@diegues.dev" }
]
requires-python = ">=3.10,<4.0"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
    "ty>=0.0.11",
    "typing-extensions>=4.12.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [ "-vv", "--cov=unwrappy" ]
